--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,13 +20,11 @@
     <string name="register_edit_text_email">Email</string>
 
 
-
-
     <!-- Landing Fragment -->
     <string name="landing_button_logout">Logout</string>
 
 
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
