--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,15 @@
     <!-- Landing Fragment -->
     <string name="landing_button_logout">Logout</string>
 
+    <!-- Setting Fragment -->
+    <string name="setting_text_view_theme">Select App Theme</string>
+    <string name="setting_radio_theme_1">Theme 1</string>
+    <string name="setting_radio_theme_2">Theme 2</string>
+    <string name="setting_radio_theme_3">Theme 3</string>
+    <string name="setting_radio_theme_4">Theme 4</string>
+    <string name="setting_button_cancel">Cancel</string>
+    <string name="setting_button_save">Save</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
