ok chat activity now creates a db, creates a table for chat contacts, sends query to heroku to check for any updates to contacts table for this user, handles json response next is parsing out json response object and altering local db to reflect changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,23 @@
 
     <!-- Landing Fragment -->
     <string name="landing_button_logout">Logout</string>
+    <string name="sqlite_internal_database_name">RabbitChatDB</string>
+
+    <!-- Contacts Activity -->
+
+
+    <!-- Chat Activity -->
+
+    <!-- >>>>>> SQLITE3 INTERNAL DEVICE DB QUERY STRINGS GO HERE <<<<<< -->
+    <!-- >>>>>> naming example: sqlite_create_table_ChatContact <<<<<< -->
+    <string name="sqlite_create_table_ChatContact">CREATE TABLE IF NOT EXISTS
+        RabbitChatDB.ChatContact ( memberid INTEGER PRIMARY KEY,  username TEXT UNIQUE NOT NULL
+        , fname TEXT, lname TEXT, created_at TEXT, last_modified TEXT, verified TEXT
+        , image_link TEXT , display_color TEXT</string>
+
+
+    <!-- >>>>>> HEROKU POSTGRES DB QUERY STRINGS GO HERE <<<<<< -->
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
