Finish changing UI Theme (built from ChadSprint2 branch)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,10 @@
 
     <!-- Setting Fragment -->
     <string name="setting_text_view_theme">Select App Theme</string>
-    <string name="setting_radio_theme_1">Theme 1</string>
-    <string name="setting_radio_theme_2">Theme 2</string>
-    <string name="setting_radio_theme_3">Theme 3</string>
-    <string name="setting_radio_theme_4">Theme 4</string>
-    <string name="setting_button_cancel">Cancel</string>
-    <string name="setting_button_save">Save</string>
+    <string name="setting_button_theme_1">Theme 1</string>
+    <string name="setting_button_theme_2">Theme 2</string>
+    <string name="setting_button_theme_3">Theme 3</string>
+    <string name="setting_button_theme_4">Theme 4</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
