--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nav_header_title">Rabbit Chat Inc</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
 
     <!-- Login Fragment -->
     <string name="login_register_text_view_welcome">Welcome!!</string>
@@ -25,6 +26,7 @@
     <string name="sqlite_internal_database_name">RabbitChatDB</string>
 
     <!-- Contacts Activity -->
+    <string name="contacts_frag_toggle_button_friends">Friends</string>
     <string name="contacts_frag_toggle_button_pending">Pending</string>
     <string name="contacts_frag_toggle_button_sent">Sent</string>
 
