--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="username">username</string>
+    <string name="message">message</string>
+    <string name="chatid">chatid</string>
+
     <string name="memberid">memberid</string>
     <string name="contacts">contacts</string>
     <string name="firstname">firstname</string>
