start new chat button has been added with listener, listener current just comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="register_edit_text_email">Email</string>
     <string name="contacts_textview_fragheader">Chat Contacts</string>s
 
+    <string name="chat_start_new_chat_button">new chat</string>
 
     <!-- Landing Fragment -->
     <string name="landing_button_logout">Logout</string>
