--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,11 +57,16 @@
     <!-- >>>>>> HEROKU POSTGRES DB QUERY STRINGS GO HERE <<<<<< -->
 
     <!-- Setting Fragment -->
-    <string name="setting_text_view_theme">Select App Theme</string>
+    <string name="setting_text_view_theme">Select App Theme Colors</string>
     <string name="setting_button_theme_1">Theme 1</string>
     <string name="setting_button_theme_2">Theme 2</string>
     <string name="setting_button_theme_3">Theme 3</string>
     <string name="setting_button_theme_4">Theme 4</string>
+
+    <string name="setting_text_view_text_size">Select App Text Size</string>
+    <string name="setting_button_text_size_small">Small</string>
+    <string name="setting_button_text_size_medium">Medium</string>
+    <string name="setting_button_text_size_large">Large</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
