--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,17 @@
     <string name="login_button_login">Login</string>
     <string name="login_register_button_register">Register</string>
     <string name="login_check_box_stay_logged_in">Stay logged in</string>
+    <string name="login_button_reset_password">Reset Password</string>
     <string name="register_edit_text_first_name">First Name</string>
     <string name="register_edit_text_last_name">Last Name</string>
     <string name="register_edit_text_email">Email</string>
     <string name="contacts_textview_fragheader">Chat Contacts</string>
+
+    <!--ChangePasswordFragment -->
+    <string name="change_password_textview">Enter your username and new password</string>
+    <string name="change_password_username">Username</string>
+    <string name="change_password_password">Password</string>
+    <string name="change_password_submit_button">Send new verification email</string>
 
     <!--Verify Fragment -->
     <string name="verify_textview">Enter your verification code</string>
